--- a/todo/templates/todo_lists_list.html
+++ b/todo/templates/todo_lists_list.html
@@ -1,5 +1,5 @@
 <ul>
-{% for todo_list_item in todo_list_items_list %}
-    <li>{{ todo_list_item }}</li>
+{% for todo_list in todo_lists %}
+    <li>{{ todo_list.name }}</li>
 {% endfor %}
 </ul>
