reorganized due to complexity

--- a/todo/templates/todo_list_items_list.html
+++ b/todo/templates/todo_list_items_list.html
@@ -1,6 +1,6 @@
 <h3>{{ todo_list.name }}</h3>
 <ul>
 {% for todo_list_item in todo_list_items %}
-    <li>{{ todo_list_item.name }}</li>
+    <li>{{ todo_list_item.title }}</li>
 {% endfor %}
 </ul>
