--- a/todo/templates/todo_list_item_detail.html
+++ b/todo/templates/todo_list_item_detail.html
@@ -1,3 +1,3 @@
-<h1>{{ todolistitem.title }} of {{ todolistitem.todo_list.name }}</h1>
-<div>Status: {% if todolistitem.done %}done{% else %}undone{% endif %}</div>
-<div>{{ todolistitem.text }}</div>
+<h1>{{ todo_list_item.title }} of {{ todo_list_item.todo_list.name }}</h1>
+<div>Status: {% if todo_list_item.done %}done{% else %}undone{% endif %}</div>
+<div>{{ todo_list_item.text }}</div>
