--- a/todo/templates/todo_lists_list.html
+++ b/todo/templates/todo_lists_list.html
@@ -1,6 +1,6 @@
 <h3>{{ request.user.username }}</h3>
 <ul>
 {% for todo_list in todo_lists %}
-    <li><a href="/todo/todo_list/{{ todo_list.id }}/items/">{{ todo_list.name }}</a></li>
+    <li><a href="/todo/list/{{ todo_list.id }}/">{{ todo_list.name }}</a></li>
 {% endfor %}
 </ul>
