todo templates reorganized

--- a/todo/templates/todo/list/item/detail.html
+++ b/todo/templates/todo/list/item/detail.html
@@ -2,5 +2,13 @@
 
 {% block content %}
     <div>{{ todo_list_item.title }}</div>
+    <div>Status:
+        {% if todo_list_item.done %}
+            done
+        {% else %}
+            undone
+        {% endif %}
+        .
+    </div>
     <div>{{ todo_list_item.text }}</div>
 {% endblock %}
