--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -6,15 +6,20 @@
         <ul>
         {% for todo_list in todo_lists %}
             <li>
-                <a href="list/{{ todo_list.id }}/">
+                <a href="{% url 'todo:list-detail' todo_list.id %}">
                     {% if todo_list.completed %}
                         <s>{{ todo_list.name }}</s>
                     {% else %}
                         {{ todo_list.name }}
                     {% endif %}
                 </a>
+                <a href="{% url 'todo:list-update' todo_list.id %}">update</a>
+                <a href="{% url 'todo:list-delete' todo_list.id %}">delete</a>
             </li>
         {% endfor %}
         </ul>
+    </div>
+    <div>
+        <a href="{% url 'todo:list-add' %}">create new</a>
     </div>
 {% endblock %}
